event show alignment fixed

--- a/app/assets/stylesheets/pages/_event_show.scss
+++ b/app/assets/stylesheets/pages/_event_show.scss
@@ -12,7 +12,7 @@
 
 .event-show-container {
 margin: 0 30px;
-min-height: calc(100vh - 70px - 70px);
+// min-height: calc(100vh - 70px - 70px);
 max-width: 96%;
 
 }
@@ -20,7 +20,8 @@ max-width: 96%;
 .event-line{
 margin-top: 20px;
 border-top: 1px solid #dce0e0;
-margin-left: 25px;
+margin-left: 50px;
+margin-right: 50px;
 max-width: 96%
 }
 
@@ -60,16 +61,18 @@ text-align: center;
 margin-bottom: 10px;
 display: flex;
 justify-content: flex-end;
+margin-left: -20px;
 }
 
 
 .event-photo {
-height: 200px;
-width: 300px;
+height: 300px;
+width: 400px;
 margin-left: auto;
 margin-right: auto;//
 padding: 0;
 margin-bottom: 30px;
+margin-top: 10px;
 
 }
 
@@ -81,7 +84,7 @@ margin-bottom: 30px;
 
 .event-log-title {
 margin-top: 10px;
-padding-left: 25px;
+padding-left: 50px;
 color: #1d97c1;
 
 }
@@ -92,7 +95,8 @@ color: #1d97c1;
   padding: 0 20px;
   margin-top: 5px;
   max-width: 96%;
-  margin-left: 24px;
+  margin-left: 51px;
+  margin-right: 50px;
 
 
 }
